Unified styles and semantics correction

--- a/form.html
+++ b/form.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li>
+                    <a href="project.html">Home</a>
+                </li>
+                <li>
                     <a href="https://www.premierleague.com/" target="_blank">Latest</a>
                 </li>
                 <li>
                     <a href="https://www.premierleague.com/results" target="_blank">Matches</a>
-                </li>
-                <li>
-                    <a href="project.html">Return Home</a>
                 </li>
             </ul>
         </nav>
@@ -34,9 +34,9 @@
         <h3>
             Just hit 'Return Home' in the menu... nothing to see here...
         </h3>
-        <p>
-            Thanks!
-        </p>
+        <div class="animation">
+            <p>Thanks!</p>
+        </div>
     </main>
 </body>
 </html>
