--- a/project.html
+++ b/project.html
@@ -15,6 +15,9 @@
         <nav>
             <ul>
                 <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
                     <a href="https://www.premierleague.com/" target="_blank">Latest</a>
                 </li>
                 <li>
@@ -346,31 +349,35 @@
     </main>
 
     <footer>
-        <nav aria-label="Footer Navigation">
-            <p>
+        <section>
+             <p>
                 <a href="https://www.premierleague.com" target="_blank" rel="noopener noreferrer">
                     PREMIER LEAGUE 2025<sup>&#174;</sup>
                 </a>
             </p>
-            <ul>
-                <li>
-                    <a href="https://www.premierleague.com/modern-slavery-statement" target="_blank" rel="noopener noreferrer">
-                    Modern Slavery Statement
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.premierleague.com/terms-and-conditions" target="_blank" rel="noopener noreferrer">
-                    Terms & Conditions, Cookies Policy
-                    </a>
-                </li>
-                <li>
-                    <a href="#top">Back To Top</a>
-                </li>
-            </ul>
             <p>
-                <a href="bonus.html">Bonus Content Page</a>
+                <a class="bonus" href="bonus.html">Bonus Content Page</a>
             </p>
-        </nav>
+        </section>
+        <section>
+            <nav aria-label="Footer Navigation">
+                <ul>
+                    <li>
+                        <a href="https://www.premierleague.com/modern-slavery-statement" target="_blank" rel="noopener noreferrer">
+                        Modern Slavery Statement
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.premierleague.com/terms-and-conditions" target="_blank" rel="noopener noreferrer">
+                        Terms & Conditions, Cookies Policy
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#top">Back To Top</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </footer>
 
 </body>
