--- a/bonus.html
+++ b/bonus.html
@@ -5,83 +5,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="project.css">
     <title>Bonus-content</title>
 </head>
 
 <body>
-    <section>
-        <p>&#8592; <a href="project.html">Back</a></p>
-    </section>
+    <header>
+        <h1>Inside Matters </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="project.html">Home</a>
+                </li>
+                <li>
+                    <a href="https://www.premierleague.com/" target="_blank">Latest</a>
+                </li>
+                <li>
+                    <a href="https://www.premierleague.com/results" target="_blank">Matches</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-    <section>
-        <strong>Inside Matters </strong>
-        <hr>
-        <p> <strong>Frank:</strong> Making a call can make other people happy </p>
-        <p><strong>As part of 'Inside Matters; Brentford head coach discusses why talking can be positive for improving
-                mental health</strong></p>
-        <p>She talks a lot. Rookie mistake!" laughed <a
-                href="https://www.premierleague.com/clubs/130/Brentford/overview">Brentford</a> head coach <a
-                href="https://www.premierleague.com/managers/44742/Thomas-Frank/overview">Thomas Frank,</a>
-            after making a surprise phone call to check
-            on his mother-in-law as part of the Premier League's <a
-                href="https://www.premierleague.com/insidematters">"Inside Matters"</a> campaign.
+    <hr>
 
-            Frank has joined his fellow Premier League managers, and players from all top-flight clubs, in getting
-            involved with
-            "Inside Matters", which raises awareness of mental health and encourages fans to check in on the wellbeing
-            of others.
+    <main>
+        <section>
+            <h2>Frank: Making a call can make other people happy </h2>
+            <p>
+                As part of 'Inside Matters; Brentford head coach discusses why talking can be positive for improving mental health
+            </p>
+            <p>
+                She talks a lot. Rookie mistake!" laughed
+                <a href="https://www.premierleague.com/clubs/130/Brentford/overview" target="_blank">Brentford</a> head coach
+                <a href="https://www.premierleague.com/managers/44742/Thomas-Frank/overview" target="_blank">Thomas Frank</a>,
+                after making a surprise phone call to check on his mother-in-law as part of the Premier League's
+                <a href="https://www.premierleague.com/insidematters" target="_blank">"Inside Matters"</a>
+                campaign.
+            </p>
+            <p>
+                Frank has joined his fellow Premier League managers, and players from all top-flight clubs,
+                in getting involved with "Inside Matters", which raises awareness of mental health and encourages
+                fans to check in on the wellbeing of others.
+            </p>
+            <p>
+                To help initiate conversations around mental health, Frank was invited to make a call to check in
+                on a friend or a loved one.
+            </p>
+            <p>
+                As you can see in the video above, he chose his mother-in-law, who Frank said he cared about a lot but
+                rarely spoke to on the phone.
+            </p>
+            <p>
+                After a conversation covering topics ranging from coffee and garden moles, to Brentford's next
+                match and the family's support of him, Frank reiterated the importance of checking in with loved ones.
+            </p>
+            <blockquote class="quote">
+                <p>She's getting older so a call from me, or her daughter or son or other daughter, gives her a lot.</p>
+                <p>"I think every single time you do it [make a call] you get a positive response. You make other people happy, it makes you happy."</p>
+            </blockquote>
+        </section>
 
-            To help initiate conversations around mental health, Frank was invited to make a call to check in on a
-            friend or a loved
-            one.
+        <section>
+            <h2>Professional support available</h2>
+            <p>
+                To help fans access professional support, the Premier League is collaborating with
+                <a href="https://giveusashout.org/" target="_blank">Shout,</a>
+                a free, confidential 24/7 text support service for anyone in the UK who is struggling
+                with their mental health, run by the charity Mental Health Innovations.
+            </p>
+            <p>
+                Fans can text "SHOUT" to 85258 to receive round-the-clock support from trained volunteers,
+                supervised and supported in real time by an expert clinical team.
+            </p>
+            <p>
+                Through the partnership, the League is providing funding for Shout’s helpline services over
+                the weekend and during Mental Health Awareness Week.
+            </p>
+            <p>
+                You can also
+                <a href="https://www.premierleague.com/insidematters/stay-well" target="_blank">access mental-health advice and resources here</a>
+                through the Premier League's own
+                <a href="https://www.premierleague.com/insidematters/stay-well" target="_blank">Stay Well Hub.</a>
+            </p>
+        </section>
+    </main>
 
-            As you can see in the video above, he chose his mother-in-law, who Frank said he cared about a lot but
-            rarely spoke to
-            on the phone.
-
-            After a conversation covering topics ranging from coffee and garden moles, to Brentford's next match and the
-            family's
-            support of him, Frank reiterated the importance of checking in with loved ones.
-
-            "[She's] getting older so a call from me, or her daughter or son or other daughter, gives [her] a lot," he
-            said.
-
-            "I think every single time you do it [make a call] you get a positive response. You make other people happy
-            - it makes
-            you happy."</p>
-        <span><strong>Professional support available</strong></span>
-        <p>To help fans access professional support, the Premier League is collaborating with <a
-                href="https://giveusashout.org/">Shout,</a> a free,
-            confidential 24/7 text
-            support service for anyone in the UK who is struggling with their mental health, run by the charity Mental
-            Health
-            Innovations.
-
-            Fans can text "SHOUT" to 85258 to receive round-the-clock support from trained volunteers, supervised and
-            supported in
-            real time by an expert clinical team.
-
-            Through the partnership, the League is providing funding for Shout’s helpline services over the weekend and
-            during
-            Mental Health Awareness Week.
-
-            You can also <a href="https://www.premierleague.com/insidematters/stay-well">access mental-health advice and
-                resources here</a> through the Premier League's own <a
-                href="https://www.premierleague.com/insidematters/stay-well">Stay Well Hub.</a>
+    <footer>
+        <p>
+            &#169; Copyright 2025
         </p>
-
-    </section>
-    <br>
-    <br>
-    <br>
-
+    </footer>
 </body>
-
-
-<footer>
-    <div>
-        copyright 2025
-    </div>
-</footer>
-
 </html>
